# pixoo-rest

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  MODERNIZATION_PLAN.md  README.md  agents.md  app.py  compose.yml  pyproject.toml
examples/: clockwise_swipe.sh  progress_bar.sh
src/pixoo_rest/: __init__.py  app.py  dependencies.py  main.py  utils.py
src/pixoo_rest/api/: divoom.py  download.py  draw.py  image.py  send.py  set.py
src/pixoo_rest/core/: config.py
src/pixoo_rest/models/: requests.py
